# vcmake_u

./: README.md
Chapter01/recipe_01/: hello-world.cpp
Chapter01/recipe_02_linking_libraries/: CMakeLists.txt  Message.cpp  Message.hpp  hello-world.cpp
Chapter03/01_Python/: CMakeLists.txt
Chapter03/02_PythonLibrary/: CMakeLists.txt  hello-python.c
Chapter03/03_PythonModulesPackages/: CMakeLists.txt  Py3-pure-embedding.cpp
